Move from NIO File to NIO.2 Path and Files APIs
- Fix Files.list(Path) and Files.lines(Path) usage. The returned stream
  must be closed in order to close the open directory/file. And ensure to
  rethrow any wrapped IOException when calling the stream methods.

- Use Files.setPosixFilePermissions(Path, String) instead of
  File.setExecutable(boolean).

- Use Files.getLastModifiedTime(Path) instead of File.lastModified().

- Ensure Files.exists(Path) is used instead of File.exists().

- Avoid creating and using File objects. Use Path objects.

The only NIO File usage remaining are File.separator/File.pathSeparator, that
have no better alternative; some Path.toFile() conversions to pass as
parameters, that cannot be avoided; and File.deleteOnExit() for the tests,
which still seems better than the NIO.2 alternative.